Close #131: [v0.5.0-rc3] Merge v0.5.0 branch